Fix project length overflow

--- a/src/components/topbar/style.less
+++ b/src/components/topbar/style.less
@@ -261,7 +261,7 @@
         opacity: 1;
     }
     .overflowText {
-        max-width: 263px;
+        max-width: 250px;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
